--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,18 @@
         "symfony/filesystem": "^3.4"
     },
     "require-dev": {
+        "mikey179/vfsstream": "~1.4.0",
         "oxid-esales/flow-theme": "^v3.0.2",
         "oxid-esales/oxideshop-doctrine-migration-wrapper": "^v2.1.2",
         "oxid-esales/oxideshop-db-views-generator": "^v1.2.0",
         "oxid-esales/oxideshop-demodata-installer": "^v1.1.2",
         "oxid-esales/oxideshop-composer-plugin": "dev-master",
         "oxid-esales/oxideshop-unified-namespace-generator": "^2.0.0",
-        "oxid-esales/testing-library": "dev-b-6.x",
         "oxid-esales/coding-standards-wrapper": "^v3.0.0",
         "incenteev/composer-parameter-handler": "~v2.0",
         "oxid-esales/oxideshop-ide-helper": "^3.0",
         "oxid-esales/azure-theme": "^v1.4.1",
+        "phpunit/phpunit": "^7",
         "oxid-esales/oxideshop-facts": "^2.3.1"
     },
     "autoload": {
@@ -54,19 +55,20 @@
     "prefer-stable": true,
     "bin": ["bin/oe-console"],
     "scripts": {
-        "post-install-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "@oe:ide-helper:generate"
-        ],
-        "post-update-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "@oe:ide-helper:generate"
-        ],
         "oe:ide-helper:generate": [
             "if [ -f ./vendor/bin/oe-eshop-ide_helper ]; then oe-eshop-ide_helper; fi"
+        ],
+        "phpunit": [
+            "./vendor/bin/phpunit --debug --configuration phpunit.xml"
         ]
     },
     "extra": {
+        "post-install-cmd": [
+            "@oe:ide-helper:generate"
+        ],
+        "post-update-cmd": [
+            "@oe:ide-helper:generate"
+        ],
         "oxideshop": {
             "blacklist-filter": [
                 "Application/Component/**/*",
@@ -75,16 +77,6 @@
                 "Core/**/*",
                 "Internal/**/*"
             ]
-        },
-        "incenteev-parameters": {
-            "file": "test_config.yml",
-            "dist-file": "vendor/oxid-esales/testing-library/test_config.yml.dist",
-            "parameter-key": "mandatory_parameters",
-            "env-map": {
-                "shop_path": "SHOP_PATH",
-                "shop_tests_path": "SHOP_TESTS_PATH",
-                "partial_module_paths": "PARTIAL_MODULE_PATHS"
-            }
         }
     }
 }
