OXDEV-3039 - Update composer to get new symfony packages

--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
         "doctrine/collections": "^1.4.0",
         "monolog/monolog": "^v1.23.0",
         "psr/container": "1.0.*",
-        "symfony/event-dispatcher": "^3.4",
-        "symfony/dependency-injection": "^3.4.26",
-        "symfony/config": "~3.3|~4.0",
-        "symfony/yaml": "~3.4|~4.0",
-        "symfony/expression-language": "^3.4",
-        "symfony/lock": "^3.4",
-        "symfony/console": "^v3.4.15",
+        "symfony/event-dispatcher": "^v4.4.3",
+	    "symfony/dependency-injection": "^4.4",
+        "symfony/config": "^v4.4.3",
+        "symfony/yaml": "v4.4.3",
+        "symfony/expression-language": "^v4.4.3",
+        "symfony/lock": "^v4.4.3",
+        "symfony/console": "^v4.4.3",
         "webmozart/path-util": "^2.3",
-        "symfony/finder": "^3.4",
+        "symfony/finder": "^v4.4.3",
         "symfony/filesystem": "^3.4"
     },
     "require-dev": {
