--- a/source/Internal/Container/bootstrap-services.yaml
+++ b/source/Internal/Container/bootstrap-services.yaml
@@ -13,5 +13,7 @@ services:
         public: false
 
     OxidEsales\EshopCommunity\Internal\Container\Event\ConfigurationChangedEventSubscriber:
-        class: OxidEsales\EshopCommunity\Internal\Container\Event\ConfigurationChangedEventSubscriber
-        tags: ['kernel.event_subscriber']
+      class: OxidEsales\EshopCommunity\Internal\Container\Event\ConfigurationChangedEventSubscriber
+      public: true
+      tags:
+       - { name: kernel.event_subscriber }
