--- a/source/Internal/Framework/Logger/services.yaml
+++ b/source/Internal/Framework/Logger/services.yaml
@@ -24,7 +24,9 @@ services:
 
   utility.context.log_file_path:
     class: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface
+    public: true
     factory: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface:getLogFilePath
   utility.context.log_level:
     class: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface
+    public: true
     factory: OxidEsales\EshopCommunity\Internal\Transition\Utility\ContextInterface:getLogLevel
